--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         class="flex justify-center flex-col bg-white w-70 p-3 gap-4 rounded-xl"
       >
         <img
-          class="rounded-xl"
+          class="rounded-lg"
           src="./images/image-qr-code.png"
           alt="image-qr-code"
         />
         <div>
-          <p class="text-stale-900 font-bold text-balance text-center">
+          <p class="text-stale-900 font-bold text-balance text-center text-[19px]">
             Improve your front-end skills by building projects
           </p>
           <p
-            class="text-stale-500 font-[400px] text-center text-wrap text-[15px] mt-3"
+            class="text-stale-500 font-[400px] text-center mt-3 mb-4 text-[15px]"
           >
             Scan the QR code to visit Frontend Mentor and take your coding
             skills to the next level
