--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+  
 
     <link
       rel="icon"
@@ -25,7 +25,9 @@
           alt="image-qr-code"
         />
         <div>
-          <p class="text-stale-900 font-bold text-balance text-center text-[19px]">
+          <p
+            class="text-stale-900 font-bold text-balance text-center text-[19px]"
+          >
             Improve your front-end skills by building projects
           </p>
           <p
